--- a/capsule/collections/cartas/random/2000-04-06_moderate_reflections.gmi
+++ b/capsule/collections/cartas/random/2000-04-06_moderate_reflections.gmi
@@ -22,3 +22,6 @@ Dr. Helmholtz lives in Lausanne, Switzerland, with his servant Hrolf and his Gre
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
