--- a/capsule/collections/cartas/random/2001-07-25_boring_bird_talk.gmi
+++ b/capsule/collections/cartas/random/2001-07-25_boring_bird_talk.gmi
@@ -23,3 +23,6 @@ Someone learned to communicate with birds and discovered that their conversation
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
