--- a/capsule/collections/cartas/random/2001-10-09_the_gloucester_cheese_race.gmi
+++ b/capsule/collections/cartas/random/2001-10-09_the_gloucester_cheese_race.gmi
@@ -25,3 +25,6 @@ Even after the two of them rolled 33 meters with the cheese between them, each c
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
