--- a/capsule/collections/cartas/random/2002-01-16_776_bc_at_the_olympics.gmi
+++ b/capsule/collections/cartas/random/2002-01-16_776_bc_at_the_olympics.gmi
@@ -29,3 +29,6 @@ Zeno muses: "I can't believe I bought a ticket for this."
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
