--- a/capsule/collections/cartas/random/2002-03-07_telerj.gmi
+++ b/capsule/collections/cartas/random/2002-03-07_telerj.gmi
@@ -23,3 +23,6 @@ Then a guy I can't admit is from the flunfa turned to me and said: Telerj.
 
 Take care,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
