--- a/capsule/collections/cartas/random/2003-03-18_corporate_ear_muffs.gmi
+++ b/capsule/collections/cartas/random/2003-03-18_corporate_ear_muffs.gmi
@@ -23,3 +23,6 @@ Your earmuffs do not belong to you. They belong to a multinational corporation.
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
