--- a/capsule/collections/cartas/random/2003-08-27_still_on_cetaceans.gmi
+++ b/capsule/collections/cartas/random/2003-08-27_still_on_cetaceans.gmi
@@ -25,3 +25,6 @@ Narrator: The Persians, apparently, found a way to transport a huge dolphin all 
 
 Take care,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
