--- a/capsule/collections/cartas/random/2004-04-20_pan_games_flash.gmi
+++ b/capsule/collections/cartas/random/2004-04-20_pan_games_flash.gmi
@@ -25,3 +25,6 @@ Meanwhile, the Panamanian synchronized swimming duo is having trouble with their
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
