--- a/capsule/collections/cartas/random/2004-12-03_christmas_tales_gdansk_or_kelvin.gmi
+++ b/capsule/collections/cartas/random/2004-12-03_christmas_tales_gdansk_or_kelvin.gmi
@@ -29,3 +29,6 @@ Life in a place where temperature can only be measured in Kelvin (or by some oth
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
