--- a/capsule/collections/cartas/random/2005-06-30_germany_vs_south_korea_broadcast.gmi
+++ b/capsule/collections/cartas/random/2005-06-30_germany_vs_south_korea_broadcast.gmi
@@ -28,3 +28,6 @@ Wheat flour ad: Haz de Oros. "It goes far, it goes far, it goeees far, what a pl
 
 Cheers,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
