--- a/capsule/collections/cartas/random/2006-06-30_restaurant_review_le_domaine_de_chateauvieux.gmi
+++ b/capsule/collections/cartas/random/2006-06-30_restaurant_review_le_domaine_de_chateauvieux.gmi
@@ -31,3 +31,6 @@ Accepts meal vouchers (VR and Ticket Restaurante).
 
 Regards,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
