--- a/capsule/collections/cartas/random/2007-01-15_grandpa_simpson_s_onion_belt.gmi
+++ b/capsule/collections/cartas/random/2007-01-15_grandpa_simpson_s_onion_belt.gmi
@@ -30,3 +30,6 @@ Well... where were we? Right. The important thing is that I had an onion on my b
 
 Cheers,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
