--- a/capsule/collections/cartas/random/2007-04-12_breaking_news_badgers.gmi
+++ b/capsule/collections/cartas/random/2007-04-12_breaking_news_badgers.gmi
@@ -25,3 +25,6 @@ William Golpo, a resident of Surtham County, survived a badger attack this Sunda
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
