--- a/capsule/collections/cartas/random/2007-06-01_tomatoes_once_poisonous.gmi
+++ b/capsule/collections/cartas/random/2007-06-01_tomatoes_once_poisonous.gmi
@@ -23,3 +23,6 @@ In the past, the tomato was considered poisonous because it was so red, and no o
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
