--- a/capsule/collections/cartas/random/2008-01-21_san_marino_gdp_shares_1952.gmi
+++ b/capsule/collections/cartas/random/2008-01-21_san_marino_gdp_shares_1952.gmi
@@ -23,3 +23,6 @@ Share of the GDP of the Republic of San Marino in 1952: Stamps â€” 18.2%; Wigs â
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
