--- a/capsule/collections/cartas/random/2008-05-23_pigeons_and_peace.gmi
+++ b/capsule/collections/cartas/random/2008-05-23_pigeons_and_peace.gmi
@@ -23,3 +23,6 @@ According to ornithologists, the pigeon is not really the bird that should have 
 
 Regards,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
