--- a/capsule/collections/cartas/random/2009-03-23_moustache_as_collateral.gmi
+++ b/capsule/collections/cartas/random/2009-03-23_moustache_as_collateral.gmi
@@ -23,3 +23,6 @@ It is said that Dom Joao de Castro, a Portuguese general in Goa, once found hims
 
 Take care,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
