--- a/capsule/collections/cartas/random/2009-05-29_official_city_drunk.gmi
+++ b/capsule/collections/cartas/random/2009-05-29_official_city_drunk.gmi
@@ -23,3 +23,6 @@ In ancient Sparta, an official was appointed to the position of "Official City D
 
 Cheers,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
