--- a/capsule/collections/cartas/random/2010-02-17_amapa_s_26_guinea_fowl.gmi
+++ b/capsule/collections/cartas/random/2010-02-17_amapa_s_26_guinea_fowl.gmi
@@ -23,3 +23,6 @@ Also from the Universal Dictionary of Curiosities: the territory of Amapa shows 
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
