--- a/capsule/collections/cartas/random/2010-04-23_an_aparicio_on_the_pitch.gmi
+++ b/capsule/collections/cartas/random/2010-04-23_an_aparicio_on_the_pitch.gmi
@@ -23,3 +23,6 @@ There's an Aparicio in the Flamengo vs Alianza Lima match. The first Aparicio in
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
