--- a/capsule/collections/cartas/random/2010-05-19_notable_birthdays_june_7.gmi
+++ b/capsule/collections/cartas/random/2010-05-19_notable_birthdays_june_7.gmi
@@ -31,3 +31,6 @@ Great human beings born on June 7 (source: Wikipedia):
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
