--- a/capsule/collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi
+++ b/capsule/collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi
@@ -27,3 +27,6 @@ I suppose foreigners don't enjoy our food any more than we enjoy theirs. It's no
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
