--- a/capsule/collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi
+++ b/capsule/collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi
@@ -25,3 +25,6 @@ And nothing is more exciting, lyrical, and sublime than human lard. When I see a
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
