--- a/capsule/collections/cartas/random/2012-05-07_borrowing_an_eraser.gmi
+++ b/capsule/collections/cartas/random/2012-05-07_borrowing_an_eraser.gmi
@@ -25,3 +25,6 @@ Pierre, our alpine guide, who recovered from his painful seasickness and began w
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
