--- a/capsule/collections/cartas/random/2013-03-15_ivo_who_saw_the_grape.gmi
+++ b/capsule/collections/cartas/random/2013-03-15_ivo_who_saw_the_grape.gmi
@@ -25,3 +25,6 @@ Around noon, there was a knock at the door from that Ivo who saw the grape — o
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
