--- a/capsule/collections/cartas/random/2015-01-26_community_idea_sausage_events.gmi
+++ b/capsule/collections/cartas/random/2015-01-26_community_idea_sausage_events.gmi
@@ -26,3 +26,6 @@ Image: a thousand elderly Chinese doing morning exercises
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
