--- a/capsule/collections/cartas/random/2015-08-31_community_idea_nelson_the_bearded_lady.gmi
+++ b/capsule/collections/cartas/random/2015-08-31_community_idea_nelson_the_bearded_lady.gmi
@@ -26,3 +26,6 @@ Image: Karl Marx, with the word 'reenactment' in the photo caption
 
 Best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
