--- a/capsule/pages/recomendati0n.gmi
+++ b/capsule/pages/recomendati0n.gmi
@@ -106,3 +106,6 @@
 => https://www.noisebridge.net/wiki/Noisebridge
 => https://www.ccc.de/
 => https://phonelosers.com/
+---
+
+desenvolvido por pablo murad - 2024 - 2026
