--- a/capsule/collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi
+++ b/capsule/collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi
@@ -25,3 +25,6 @@ Helio, the Hermeneut: a mild-mannered Capricorn, often mistaken for a weather ba
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
