--- a/capsule/collections/cartas/random/2004-01-05_super_pla_1969.gmi
+++ b/capsule/collections/cartas/random/2004-01-05_super_pla_1969.gmi
@@ -28,3 +28,6 @@ Plot: "A young man takes a magic potion and turns into Super Pla."
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
