--- a/capsule/collections/cartas/random/2005-12-14_ape_men_in_sweden.gmi
+++ b/capsule/collections/cartas/random/2005-12-14_ape_men_in_sweden.gmi
@@ -23,3 +23,6 @@ A tribe of primitive ape-men will be found in Sweden, intact, playing Monopoly.
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
