--- a/capsule/collections/cartas/random/2007-08-03_thailand_s_petition_husband.gmi
+++ b/capsule/collections/cartas/random/2007-08-03_thailand_s_petition_husband.gmi
@@ -23,3 +23,6 @@ In Thailand, any unmarried woman who turns 30 has the right to petition the gove
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
