--- a/capsule/collections/cartas/random/2010-01-29_the_disguised_gorilla.gmi
+++ b/capsule/collections/cartas/random/2010-01-29_the_disguised_gorilla.gmi
@@ -23,3 +23,6 @@ The case is famous of the man who, in 1963, tried to transport a gorilla from Id
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
