--- a/capsule/collections/cartas/random/2010-08-31_cone_before_ice_cream.gmi
+++ b/capsule/collections/cartas/random/2010-08-31_cone_before_ice_cream.gmi
@@ -23,3 +23,6 @@ Did you know the ice cream cone was invented before ice cream?
 
 Take care,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
