--- a/capsule/collections/cartas/random/2014-03-31_small_talk_with_an_epidemiologist.gmi
+++ b/capsule/collections/cartas/random/2014-03-31_small_talk_with_an_epidemiologist.gmi
@@ -27,3 +27,6 @@ How to start a conversation with an infectious disease specialist:
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
