--- a/capsule/collections/cartas/random/2014-05-07_small_talk_with_an_occupational_therapist.gmi
+++ b/capsule/collections/cartas/random/2014-05-07_small_talk_with_an_occupational_therapist.gmi
@@ -27,3 +27,6 @@ How to start a conversation with an occupational therapist:
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
