--- a/capsule/collections/cartas/random/2015-06-10_community_idea_the_great_stoat_revolution.gmi
+++ b/capsule/collections/cartas/random/2015-06-10_community_idea_the_great_stoat_revolution.gmi
@@ -26,3 +26,6 @@ Image: Portrait of King Louis XVI of France wearing an ermine-trimmed mantle
 
 Warmly,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
