--- a/capsule/collections/cartas/random/2016-05-03_community_idea_better_english_than_hugh_grant.gmi
+++ b/capsule/collections/cartas/random/2016-05-03_community_idea_better_english_than_hugh_grant.gmi
@@ -26,3 +26,6 @@ Image: 42nd class of the theater course at the Eri Johnson Schools
 
 All the best,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
