--- a/capsule/collections/cartas/random/2016-07-04_community_idea_cured_by_citrus.gmi
+++ b/capsule/collections/cartas/random/2016-07-04_community_idea_cured_by_citrus.gmi
@@ -25,3 +25,6 @@ Image: the theme of 'Beauty and the Beast', in a Dadaist version
 
 Until soon,
 Marcos Barbxxara
+---
+
+desenvolvido por pablo murad - 2024 - 2026
