--- a/capsule/collections/mentalhealth/main/demônio_em_fuga_1.gmi
+++ b/capsule/collections/mentalhealth/main/demônio_em_fuga_1.gmi
@@ -4,6 +4,8 @@
 
 ---
 
+algum lugar de 2015...
+
 Primeiramente, eu diria, minha história é mais extensa do que eu poderia descrever aqui. Sempre haverá uma brecha, um espaço vazio para mais algumas palavras. Eu me lembro bem da minha infância, na verdade eu me lembro do meu primeiro dia de vida, achava que isso não era possível até ver um programa de televisão sobre memórias e traumas.
 Nascer é um trauma.
 Lembro-me das luzes no teto do hospital e de enxergar tudo de maneira embaçada, como me lembro dos meus gostos estranhos quando ainda possuía pouco (ou quase nenhum) discernimento. Diferente das outras crianças que gostavam de ouvir histórias infantis na TV Cultura, eu preferia histórias sobre assombrações, demônios e lobisomens contadas pela minha avó. Casinhas, sol, flores e um morro gramado não eram nem de perto meus alvos artísticos, eu gostava mais de esqueletos e cemitérios os quais eram basicamente a composição de meus desenhos.
